# ehrextract

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/ehrextract/: README.md  data-handling.md  extending-providers.md  quickstart.md  schema-reference.md
src/ehrextract/: LICENSE  NOTICE  __init__.py  __main__.py  _version.py  cli.py  constrained.py  io.py  pipeline.py  providers.py  schema.py
src/ehrextract/tasks/: clinical_vars.yaml  comorbidity.yaml  full.yaml
tests/ehrextract/: conftest.py
tests/ehrextract/evals/: __init__.py
tests/ehrextract/evals/datasets/clinical_features_v1/: README.md  expected.jsonl  notes.jsonl  prompt.txt  schema.yaml
tests/ehrextract/fixtures/responses/: anthropic_well_formed.json  openai_well_formed.json
tests/ehrextract/fixtures/schemas/: clinical_features.yaml
tests/ehrextract/integration/: test_batch.py  test_cli.py  test_extract_api.py  test_extractor_end_to_end.py  test_repair.py
tests/ehrextract/providers/: test_anthropic.py  test_anthropic_batch.py  test_huggingface.py  test_load_provider.py  test_openai.py  test_openai_batch.py
tests/ehrextract/unit/: test_constrained.py  test_egress.py  test_io.py  test_messages.py  test_parsing.py  test_schema.py  test_task.py
