[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ehrextract"
version = "0.3.0"
description = "Structured feature extraction from clinical notes"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [
    { name = "Chen Zhang" },
    { name = "Yibing Xia" },
    { name = "Sanjay Mahant" },
    { name = "Nathan Taback" },
]
keywords = ["clinical", "nlp", "extraction", "llm", "structured-output"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
hf = [
    "torch>=2.0",
    "transformers>=4.56",
    "peft>=0.10",
    "accelerate>=0.30",
    "lm-format-enforcer>=0.11.3,<0.12",
]
openai = ["openai>=1.35"]
anthropic = ["anthropic>=0.42"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "lm-format-enforcer>=0.11.3,<0.12",
]

[project.scripts]
ehrextract = "ehrextract.cli:main"

[project.urls]
Homepage = "https://github.com/shifosss/ehrextract"
Repository = "https://github.com/shifosss/ehrextract"
Issues = "https://github.com/shifosss/ehrextract/issues"
Changelog = "https://github.com/shifosss/ehrextract/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ehrextract*"]

[tool.setuptools.package-data]
ehrextract = ["py.typed", "LICENSE", "NOTICE", "tasks/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "gpu: tests that require a GPU (skipped on CI by default)",
    "slow: slow integration tests",
]
